--- a/_includes/demo-button.html
+++ b/_includes/demo-button.html
@@ -1,6 +1,6 @@
 <button class="btn btn-primary js-demo-button">
 {% if include.locale == "en" %}
-Ask a demo
+Ask for a demo
 {% else %}
 Demandez une démonstration
 {% endif %}
