Add backlink on UCAYA logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,9 @@
             Pensée et développée par
             {% endif %}
         </span>
-        <img src="{{ '/assets/vectors/logo-ucaya.svg' | relative_url }}" class="logo-ucaya">
+        <a href="https://ucaya.com" target="_blank" title="UCAYA">
+            <img src="{{ '/assets/vectors/logo-ucaya.svg' | relative_url }}" class="logo-ucaya">
+        </a>
     </div>
 
     <section class="footer-infos">
