Add Google Analytics, Slack webhook and referer in intercom custom data

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -51,6 +51,9 @@
       window.Intercom("boot", {
         app_id: "{{ site.intercom_app_id }}"
       });
+      window.intercomSettings = {
+        referer: location.toString()
+      }
     </script>
   {% endif %}
   </body>
